[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch and filter PubMed papers"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"